Stop css animation flickering

--- a/src/assets/css/_button.scss
+++ b/src/assets/css/_button.scss
@@ -13,7 +13,7 @@
   cursor: pointer;
   padding: 0.6em 1em 0.65em;
   text-decoration: none;
-  transition: 0.2s ease;
+  transition: background-color 0.2s ease;
   outline-color: transparent;
   outline-offset: -2px;
   &:focus,
